footer overlap fix

--- a/src/_includes/css/global.scss
+++ b/src/_includes/css/global.scss
@@ -85,7 +85,7 @@ $halftone: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKL
 
 @media (min-width: 700px) {
   .heading {
-    letter-spacing: auto;
+    letter-spacing: 1rem;
     font-size: 8vw;
     background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAF0lEQVQYlWNgYGD4D8U4AUEF1Af0dhMAOBcH+bmFHC0AAAAASUVORK5CYII=);
   }
